--- a/styles/style.css
+++ b/styles/style.css
@@ -217,10 +217,11 @@ body {
 }
 
 .projetos {
-    padding: 2% 15% 15% 15%;
+    padding: 2% 10% 15% 10%;
     background: rgb(94,94,94);
     background: linear-gradient(90deg, rgba(94,94,94,1) 0%, rgba(217,217,217,1) 15%, rgba(255,255,255,1) 50%, rgba(217,217,217,1) 85%, rgba(94,94,94,1) 100%);
     position: relative;
+    
 }
 .projetos__titulo {
     font-size: 4rem;
@@ -233,6 +234,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 2%;
+    justify-content: center;
+    align-items: center;
 }
 .projetos__cards {
     background: rgb(0,0,0);
