--- a/styles/style.css
+++ b/styles/style.css
@@ -14,8 +14,7 @@
 }
 
 body {
-    background: rgb(94,94,94);
-    background: linear-gradient(90deg, rgba(94,94,94,1) 0%, rgba(217,217,217,1) 15%, rgba(255,255,255,1) 50%, rgba(217,217,217,1) 85%, rgba(94,94,94,1) 100%);
+    background: rgb(255, 255, 255);
     overflow-x: hidden; 
     position: relative;
 }
@@ -162,8 +161,7 @@ body {
 
 .sobre-mim {
     padding: 2% 10% 4% 10%;
-    background: rgb(94,94,94);
-    background: linear-gradient(90deg, rgba(94,94,94,1) 0%, rgba(217,217,217,1) 15%, rgba(255,255,255,1) 50%, rgba(217,217,217,1) 85%, rgba(94,94,94,1) 100%);
+    background: var(--cor-branco);
     display: flex;
     gap: 7rem;  
 }
@@ -218,8 +216,7 @@ body {
 
 .projetos {
     padding: 2% 10% 15% 10%;
-    background: rgb(94,94,94);
-    background: linear-gradient(90deg, rgba(94,94,94,1) 0%, rgba(217,217,217,1) 15%, rgba(255,255,255,1) 50%, rgba(217,217,217,1) 85%, rgba(94,94,94,1) 100%);
+    background-color: var(--cor-branco);
     position: relative;
     
 }
@@ -271,9 +268,7 @@ body {
 
 .habilidades {
     padding: 2% 12% 20% 10%;
-    background: rgb(94,94,94);
-    background: linear-gradient(90deg, rgba(94,94,94,1) 0%, rgba(217,217,217,1) 15%, rgba(255,255,255,1) 50%, rgba(217,217,217,1) 85%, rgba(94,94,94,1) 100%);
-
+    background-color: var(--cor-branco);
 }
 
 .habilidades__titulo {
@@ -382,7 +377,7 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding-left: 10%;
+    padding-left: 20%;
     gap: 4rem;
 }
 .rodape__titulo {
